# ncr-new-computational-regime

./: .gitignore  CITATION.cff  CLAIM.yaml  LICENSE  README.md  STATUS.md  paper  paper.tex  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: physics-question.md
.github/workflows/: ci.yml  rr-check.yml
analysis/: README.md  bin_data.py  binning.yaml  derive_delta.py  fit_rankk.py  invariant_test.py  make_fig_table.py  pred_resid_rankk.npz  rank1_svd.py  results_rankk.json  results_section.tex  table_rankk_summary.csv  write_results_text.py
artifacts/hashes/: manifest.sha256
certs/: ISR_MIN_DIV_0001.json  ISR_NORM_FAIL_0001.json  ISR_NORM_FAIL_0001.json.minisig
data/: README.md  delta_ns.csv
data/derived/: all_delta_odd.csv  binned_delta_odd.csv
docs/: INVARIANTS.md  MODEL.md  PHYSICS_STATEMENT.md  README.md  ncr_isr_note.fdb_latexmk  ncr_isr_note.fls  ncr_isr_note.tex  separation_demo.json
manuscript/: ISR_Normalization_Resistance.md  ISR_as_a_Normalization_Resistant_Polynomial_Regime.md  README.md  low_dimensional_delta_ns.tex
model/: isr.py
notes/: WITNESS_TIGHTENING_CONDITIONAL_SCOPE_2026_04.md
schema/: isr_min_div.schema.json
scripts/: check_barrier.py  extract_divergence.py  make_isr_cert.py  normalization_attempt.py  oracle_audit.py  radius  run_divergence.py  run_isr_demo.py  scale_isr.py  separation_demo.py  sign_cert.sh  verify_isr_cert.py  verify_repo.py  verify_sig.sh
src/: pca_radiative_rigidity.py
tests/: test_barrier_checker.py  test_isr_determinism.py  test_isr_regression.py  test_sanity.py  test_smoke.py
(+10 files in other folders)
