[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radiative-rigidity"
version = "0.1.0"
description = "Radiative rigidity analysis module"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["radiative_rigidity"]

[project.optional-dependencies]
all = ["pandas","scikit-learn"]
